--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
-    "mongoose": "^8.6.2",
     "is-email": "^1.0.2",
     "is-uuid": "^1.0.2",
+    "mongoose": "^8.6.2",
+    "multer": "^1.4.5-lts.1",
     "prisma": "^5.4.2",
     "superstruct": "^1.0.3"
   },
