--- a/package.json
+++ b/package.json
@@ -29,11 +29,14 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "is-email": "^1.0.2",
+    "is-uuid": "^1.0.2",
     "jsonwebtoken": "^9.0.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "superstruct": "^2.0.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -41,6 +44,8 @@
     "@nestjs/testing": "^10.0.0",
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
+    "@types/is-email": "^1.0.0",
+    "@types/is-uuid": "^1.0.2",
     "@types/jest": "^29.5.2",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/multer": "^1.4.12",
@@ -60,7 +65,7 @@
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.7.2"
   },
   "jest": {
     "moduleFileExtensions": [
